--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# मेरा पहला Jupyter Notebook\n",
-    "यह एक उदाहरण है कि Jupyter Notebook कैसे काम करता है।"
+    "# Jupyter Notebook\n",
+    "meowww Jupyter Notebook कैसे काम करता है।"
    ]
   },
   {
