--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -1,4 +1,4 @@
-Absolutely! Here’s your **smooth, polished English version** of the lecture content — same meaning, better flow and readability
+
 
 # **Algebra and Linear Algebra in AI and Trading: Predicting Stock Prices with AI**
 
@@ -81,3 +81,22 @@ y = np.array([1.2, -3.8, 4.1])
 # AI fits the model
 model = LinearRegression().fit(X, y)
 print(f"AI Prediction for x=0.7: {model.predict([[0.7]])[0]:.2f}%")
+```
+Activity 3: Adjust AI’s Prediction  
+How would you modify the code to predict for $x = 0.4$?  
+Answer:  
+Replace [[0.7]] with [[0.4]]. Expected output ≈ 2.30% (depending on the model fit).
+
+AI Tests and Compares Models  
+AI uses backtesting to compare linear vs. quadratic models. In highly volatile markets, quadratic models often perform better due to their algebraic flexibility, allowing AI to handle extreme market movements.
+
+Activity 4: Spot the Outlier  
+Given data points: (0.3, 1.2), (-0.5, -3.8), (0.8, 4.1), (-0.9, -10.0), which point challenges AI’s model the most?  
+Answer:  
+(-0.9, -10.0), a massive drop, requiring the model to adjust for sharp downturns.
+
+Conclusion: AI, Algebra, and Trading  
+AI’s Core: Linear and quadratic equations are at the heart of AI predictions.  
+Algebra’s Power: Linear algebra enables AI to learn from data efficiently.  
+Trading Impact: Algebraic models help AI turn sentiment data into trading profits.
+
