--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -82,7 +82,9 @@ y = np.array([1.2, -3.8, 4.1])
 model = LinearRegression().fit(X, y)
 print(f"AI Prediction for x=0.7: {model.predict([[0.7]])[0]:.2f}%")
 ```
-Activity 3: Adjust AI’s Prediction  
+
+
+ **Activity 3: Adjust AI’s Prediction**  
 How would you modify the code to predict for $x = 0.4$?  
 Answer:  
 Replace [[0.7]] with [[0.4]]. Expected output ≈ 2.30% (depending on the model fit).
