--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -1,104 +1,216 @@
 
 
-# **Algebra and Linear Algebra in AI and Trading: Predicting Stock Prices with AI**
+# Algebra and Linear Algebra in AI
 
-## **Introduction: How AI Relies on Algebra**
+Algebra and linear algebra might seem like complex math topics, but they are actually the foundation of many technologies that affect our lives, especially Artificial Intelligence (AI) in trading.
 
-In AI-driven trading, algebra and linear algebra form the backbone of predictive systems.
+Imagine Alex, a data scientist at a hedge fund. His goal is to help predict Nvidia’s stock price by analyzing news articles about the company. Alex uses AI to assign a **sentiment score** to each news item, which shows whether the news is positive or negative.
 
-Imagine Alex, a data scientist at a hedge fund, using AI to predict Nvidia’s stock price based on news sentiment scores. Behind the scenes, linear and quadratic equations — the core of algebra — power these AI models, turning raw market data into actionable insights.
+But how does AI turn these sentiment scores into predictions of the stock price?
+This is where **algebra** and **linear algebra** come into play.
 
-Let’s explore how AI uses these mathematical tools.
+---
 
-## **Step 1: Linear Models – The Foundation of AI Predictions**
+### What is Algebra?
 
-AI often starts with a **linear model**, which is grounded in linear algebra:
+Algebra is a branch of mathematics that uses symbols and letters to represent numbers and quantities in formulas and equations.
+It helps us describe how different things relate to each other.
+
+For example, in the equation:
 
 $$
-y = mx + b
+y = m x + b
+$$
+
+algebra helps express the relationship between $x$ (input) and $y$ (output) using constants $m$ and $b$.
+
+---
+
+### What is Linear Algebra?
+
+Linear algebra extends these ideas to work with **vectors** and **matrices**, which are like lists and tables of numbers.
+It helps us analyze **many data points at once** and is essential for AI models working with large datasets.
+
+---
+
+### Linear Models in AI
+
+Algebra lets us describe relationships between numbers using equations.
+A simple and common algebraic equation AI uses is:
+
+$$
+y = m x + b
 $$
 
 Where:
 
-* $y$: predicted stock price change
-* $x$: sentiment score
-* $m$: slope (learned by AI)
-* $b$: intercept (adjusted by AI)
+* $y$ is the predicted change in Nvidia’s stock price (in percent),
+* $x$ is the sentiment score from news,
+* $m$ is the slope that AI learns (how strongly sentiment affects price),
+* $b$ is the intercept AI adjusts (baseline change).
 
-In AI, this is known as **linear regression** — algorithms use linear algebra to fit the best line through the data.
+This is called a **linear model**, which you can think of as a straight line drawn through a set of data points.
 
-**Example:**  
-If AI learns $m = 5$, $b = 0$, and $x = 0.8$:
+---
 
-$$
-y = 5 \times 0.8 + 0 = 4\%
-$$
+### Sentiment Scores and Price Changes
 
-**Activity 1: Test AI’s Prediction**  
-What’s the predicted price change if $x = 0.6$ in $y = 5x + 0$?  
-**Answer:**
+| Sentiment Score ($x$) | Actual Price Change ($y$ percent) |
+| --------------------- | --------------------------------- |
+| 0.3                   | 1.2                               |
+| -0.5                  | -3.8                              |
+| 0.8                   | 4.1                               |
+| -0.9                  | -10.0                             |
 
-$$
-y = 5 \times 0.6 = 3\%
-$$
 
-## **Step 2: Quadratic Models – Capturing Non-Linear Trends**
 
-AI doesn’t stop at linear models. When sentiment triggers unpredictable price swings, AI uses a **quadratic model**:
+---
 
-$$
-y = ax^2 + bx + c
-$$
+### Activity 1: Predict the Price Change
 
-The $x^2$ term allows AI to capture non-linear patterns — essential in complex, volatile markets.
+If AI finds:
 
-**Example:**  
-If AI learns $a = -2$, $b = 5$, $c = 1$, and $x = 0.8$:
+* $m = 4$
+* $b = 0.5$
+
+What is the predicted price change when $x = 1.0$?
+
+**Solution**:
 
 $$
-y = -2 \times (0.8)^2 + 5 \times 0.8 + 1 = -1.28 + 4 + 1 = 3.72\%
+y = 4 \times 1.0 + 0.5 = 4 + 0.5 = 4.5 \text{ percent}
 $$
 
-**Activity 2: Why Quadratic?**  
-Why does AI prefer quadratic models in volatile markets?  
-**Answer:**  
-The $x^2$ term bends the prediction curve, helping AI capture large jumps or drops that linear models would miss.
+---
 
-## **Step 3: How AI Learns Using Linear Algebra in Python**
+### Activity 2: Understanding Slope and Intercept
 
-AI doesn’t **guess** the right coefficients — it uses linear algebra techniques (like **least squares**) to learn them from data.
+* **What does the slope $m$ represent in this context?**
+  It shows how much the price is expected to change for each unit change in sentiment.
 
-**Python Example:**
+* **What would it mean if $m$ were zero?**
+  It would mean sentiment has no effect on price.
 
-```python
-import numpy as np
-from sklearn.linear_model import LinearRegression
+* **What role does the intercept $b$ play if $x = 0$?**
+  It represents the baseline change when sentiment is neutral.
 
-# Sentiment scores and price changes
-X = np.array([0.3, -0.5, 0.8]).reshape(-1, 1)
-y = np.array([1.2, -3.8, 4.1])
+---
 
-# AI fits the model
-model = LinearRegression().fit(X, y)
-print(f"AI Prediction for x=0.7: {model.predict([[0.7]])[0]:.2f}%")
-```
+### When Linear Models Are Not Enough
 
+Stock prices do not always move in a straight-line pattern. Markets can be **unpredictable and volatile**. That is why AI sometimes uses more complex models like quadratic equations:
 
- **Activity 3: Adjust AI’s Prediction**  
-How would you modify the code to predict for $x = 0.4$?  
-Answer:  
-Replace [[0.7]] with [[0.4]]. Expected output ≈ 2.30% (depending on the model fit).
+$$
+y = a x^2 + b x + c
+$$
 
-AI Tests and Compares Models  
-AI uses backtesting to compare linear vs. quadratic models. In highly volatile markets, quadratic models often perform better due to their algebraic flexibility, allowing AI to handle extreme market movements.
+This equation adds an $x^2$ term, which allows the prediction curve to bend and better capture real-world ups and downs.
 
-Activity 4: Spot the Outlier  
-Given data points: (0.3, 1.2), (-0.5, -3.8), (0.8, 4.1), (-0.9, -10.0), which point challenges AI’s model the most?  
-Answer:  
-(-0.9, -10.0), a massive drop, requiring the model to adjust for sharp downturns.
+---
 
-Conclusion: AI, Algebra, and Trading  
-AI’s Core: Linear and quadratic equations are at the heart of AI predictions.  
-Algebra’s Power: Linear algebra enables AI to learn from data efficiently.  
-Trading Impact: Algebraic models help AI turn sentiment data into trading profits.
+### Activity 3: Explore Non-Linearity
 
+If:
+
+* $a = -1$,
+* $b = 3$,
+* $c = 1$,
+
+Calculate the predicted price change for $x = 1$.
+
+**Solution**:
+
+$$
+y = -1 \times (1)^2 + 3 \times 1 + 1 = -1 + 3 + 1 = 3
+$$
+
+---
+
+### Activity 4: Visualizing Curves
+
+**How does adding the $x^2$ term change the shape of the prediction compared to the straight line?**
+Try sketching a simple curve for both linear and quadratic equations to see the difference.
+
+* Linear: straight line.
+* Quadratic: curve that bends up or down depending on $a$.
+
+---
+
+### How Does AI Learn These Numbers?
+
+AI does not guess these coefficients ($m, b, a, c$) randomly.
+It **learns** them from data using **linear algebra**.
+
+Linear algebra is the branch of math that helps AI handle **many numbers at once**, often arranged in tables called **matrices**.
+Using these tools, AI can find the best-fitting equations for the data.
+
+---
+
+### Example: How AI Learns
+
+In Alex’s case, AI:
+
+1. Looks at many past pairs of sentiment scores and actual price changes.
+2. Organizes this data in matrices.
+3. Uses linear algebra techniques to calculate the coefficients that minimize prediction errors.
+
+---
+
+### Activity 5: What Are Matrices?
+
+Imagine a spreadsheet where each row is a different day’s sentiment and price change.
+That is like a matrix.
+
+**Questions**:
+
+* How might arranging data this way help AI spot patterns?
+* What happens when the dataset gets very large?
+
+---
+
+### Activity 6: Simple Matrix Example
+
+Create a small $2 \times 2$ matrix:
+
+$$
+\begin{bmatrix}
+0.3 & 1.2 \\
+-0.5 & -3.8
+\end{bmatrix}
+$$
+
+Multiply it by a vector of coefficients $[m, b]$ to see how the prediction is calculated.
+
+---
+
+### Activity 7: Think and Discuss
+
+**Why do you think using matrices and linear algebra is helpful when working with large datasets?**
+
+Possible answers:
+
+* It allows efficient computation.
+* It helps detect patterns across many variables.
+* It scales well when data grows.
+
+---
+
+### Activity 8: Spot the Outlier
+
+Looking at the data points in the table, which point do you think will be hardest for AI’s linear model to predict accurately?
+Why?
+
+---
+
+### Summary
+
+In summary:
+
+* **Algebra** gives AI the equations to describe relationships in data.
+* **Linear algebra** provides the tools to learn these equations efficiently.
+
+With these tools, AI can turn simple sentiment scores into powerful predictions that help traders like Alex make informed decisions.
+
+---
+
+If you want, I can now prepare the graph code, create Python practice notebooks, or move on to the next chapter on optimization and matrix methods. Just tell me!
