--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -9,7 +9,7 @@ Imagine Alex, a data scientist at a hedge fund. His goal is to help predict Nvid
 But how does AI turn these sentiment scores into predictions of the stock price?
 This is where **algebra** and **linear algebra** come into play.
 
----
+
 
 ### What is Algebra?
 
@@ -24,14 +24,14 @@ $$
 
 algebra helps express the relationship between $x$ (input) and $y$ (output) using constants $m$ and $b$.
 
----
+
 
 ### What is Linear Algebra?
 
 Linear algebra extends these ideas to work with **vectors** and **matrices**, which are like lists and tables of numbers.
 It helps us analyze **many data points at once** and is essential for AI models working with large datasets.
 
----
+
 
 ### Linear Models in AI
 
@@ -66,7 +66,7 @@ This is called a **linear model**, which you can think of as a straight line dra
 
 ---
 
-### Activity 1: Predict the Price Change
+### Predict the Price Change
 
 If AI finds:
 
@@ -83,7 +83,7 @@ $$
 
 ---
 
-### Activity 2: Understanding Slope and Intercept
+### Understanding Slope and Intercept
 
 * **What does the slope $m$ represent in this context?**
   It shows how much the price is expected to change for each unit change in sentiment.
@@ -108,7 +108,7 @@ This equation adds an $x^2$ term, which allows the prediction curve to bend and 
 
 ---
 
-### Activity 3: Explore Non-Linearity
+### Explore Non-Linearity
 
 If:
 
@@ -126,7 +126,7 @@ $$
 
 ---
 
-### Activity 4: Visualizing Curves
+### Visualizing Curves
 
 **How does adding the $x^2$ term change the shape of the prediction compared to the straight line?**
 Try sketching a simple curve for both linear and quadratic equations to see the difference.
@@ -156,7 +156,7 @@ In Alex’s case, AI:
 
 ---
 
-### Activity 5: What Are Matrices?
+###  What Are Matrices?
 
 Imagine a spreadsheet where each row is a different day’s sentiment and price change.
 That is like a matrix.
@@ -166,9 +166,9 @@ That is like a matrix.
 * How might arranging data this way help AI spot patterns?
 * What happens when the dataset gets very large?
 
----
 
-### Activity 6: Simple Matrix Example
+
+### Simple Matrix Example
 
 Create a small $2 \times 2$ matrix:
 
@@ -181,9 +181,9 @@ $$
 
 Multiply it by a vector of coefficients $[m, b]$ to see how the prediction is calculated.
 
----
 
-### Activity 7: Think and Discuss
+
+### Think and Discuss
 
 **Why do you think using matrices and linear algebra is helpful when working with large datasets?**
 
@@ -193,9 +193,9 @@ Possible answers:
 * It helps detect patterns across many variables.
 * It scales well when data grows.
 
----
 
-### Activity 8: Spot the Outlier
+
+### Spot the Outlier
 
 Looking at the data points in the table, which point do you think will be hardest for AI’s linear model to predict accurately?
 Why?
@@ -211,6 +211,4 @@ In summary:
 
 With these tools, AI can turn simple sentiment scores into powerful predictions that help traders like Alex make informed decisions.
 
----
 
-If you want, I can now prepare the graph code, create Python practice notebooks, or move on to the next chapter on optimization and matrix methods. Just tell me!
