--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -1,5 +1,4 @@
 
-
 # Algebra and Linear Algebra in AI
 
 Algebra and linear algebra might seem like complex math topics, but they are actually the foundation of many technologies that affect our lives, especially Artificial Intelligence (AI) in trading.
@@ -9,7 +8,7 @@ Imagine Alex, a data scientist at a hedge fund. His goal is to help predict Nvid
 But how does AI turn these sentiment scores into predictions of the stock price?
 This is where **algebra** and **linear algebra** come into play.
 
-
+---
 
 ### What is Algebra?
 
@@ -24,14 +23,14 @@ $$
 
 algebra helps express the relationship between $x$ (input) and $y$ (output) using constants $m$ and $b$.
 
-
+---
 
 ### What is Linear Algebra?
 
 Linear algebra extends these ideas to work with **vectors** and **matrices**, which are like lists and tables of numbers.
 It helps us analyze **many data points at once** and is essential for AI models working with large datasets.
 
-
+---
 
 ### Linear Models in AI
 
@@ -81,7 +80,6 @@ $$
 y = 4 \times 1.0 + 0.5 = 4 + 0.5 = 4.5 \text{ percent}
 $$
 
----
 
 ### Understanding Slope and Intercept
 
@@ -94,7 +92,7 @@ $$
 * **What role does the intercept $b$ play if $x = 0$?**
   It represents the baseline change when sentiment is neutral.
 
----
+
 
 ### When Linear Models Are Not Enough
 
@@ -143,10 +141,11 @@ It **learns** them from data using **linear algebra**.
 
 Linear algebra is the branch of math that helps AI handle **many numbers at once**, often arranged in tables called **matrices**.
 Using these tools, AI can find the best-fitting equations for the data.
+![Line Plot](images/plot.png)
 
 ---
 
-### Example: How AI Learns
+### How AI Learns
 
 In Alex’s case, AI:
 
@@ -156,7 +155,7 @@ In Alex’s case, AI:
 
 ---
 
-###  What Are Matrices?
+### What Are Matrices?
 
 Imagine a spreadsheet where each row is a different day’s sentiment and price change.
 That is like a matrix.
@@ -166,7 +165,7 @@ That is like a matrix.
 * How might arranging data this way help AI spot patterns?
 * What happens when the dataset gets very large?
 
-
+---
 
 ### Simple Matrix Example
 
@@ -181,7 +180,7 @@ $$
 
 Multiply it by a vector of coefficients $[m, b]$ to see how the prediction is calculated.
 
-
+---
 
 ### Think and Discuss
 
@@ -193,14 +192,14 @@ Possible answers:
 * It helps detect patterns across many variables.
 * It scales well when data grows.
 
-
+---
 
 ### Spot the Outlier
 
 Looking at the data points in the table, which point do you think will be hardest for AI’s linear model to predict accurately?
 Why?
 
----
+
 
 ### Summary
 
@@ -210,5 +209,4 @@ In summary:
 * **Linear algebra** provides the tools to learn these equations efficiently.
 
 With these tools, AI can turn simple sentiment scores into powerful predictions that help traders like Alex make informed decisions.
-
 
