--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -141,7 +141,7 @@ It **learns** them from data using **linear algebra**.
 
 Linear algebra is the branch of math that helps AI handle **many numbers at once**, often arranged in tables called **matrices**.
 Using these tools, AI can find the best-fitting equations for the data.
-![Line Plot](session1/images/plot.png)
+![Line Plot](images/plot.png)
 
 ---
 
