--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -154,22 +154,192 @@ In Alex’s case, AI:
 3. Uses linear algebra techniques to calculate the coefficients that minimize prediction errors.
 
 ---
-
-### What Are Matrices?
-
-Imagine a spreadsheet where each row is a different day’s sentiment and price change.
-That is like a matrix.
-
-**Questions**:
-
-* How might arranging data this way help AI spot patterns?
-* What happens when the dataset gets very large?
+Got it!
+Here’s a slightly polished version, cutting down on the repetition of “sentiment,” removing emojis, no em dash, and adding an activity.
 
 ---
 
-### Simple Matrix Example
+### **Functions — Mapping Inputs to Outputs**
 
-Create a small $2 \times 2$ matrix:
+A **function** is like a machine:
+
+* You provide an input $x$,
+* The machine applies a rule $f(x)$,
+* You get an output $y$.
+
+---
+
+| **Example Function** |
+| -------------------- |
+| $f(x) = 2x + 3$      |
+
+If input $x = 1$:
+
+$$
+f(1) = 2 \times 1 + 3 = 5
+$$
+
+This kind of rule can represent how one variable (like a numerical score) affects another (such as predicted price movement).
+
+Why is this useful in AI?
+AI models often use functions — sometimes very complex or nonlinear — to transform raw input data (like text scores, prices, volumes) into useful predictions or classifications.
+
+Without functions, we cannot systematically map input patterns to meaningful outputs.
+
+---
+
+### Apply a Simple Function**
+
+Given $f(x) = 3x - 2$:
+
+* Calculate $f(2)$
+* Calculate $f(-1)$
+
+How does the function handle positive vs negative inputs?
+
+---
+
+### **Polynomials: Modeling Nonlinear Relationships**
+
+Polynomials expand functions by adding powers:
+
+| **General Polynomial**                        |
+| --------------------------------------------- |
+| $y = a_0 + a_1 x + a_2 x^2 + a_3 x^3 + \dots$ |
+
+Example (quadratic):
+
+$$
+y = -x^2 + 4x + 1
+$$
+
+Why is this important in trading AI?
+Markets rarely behave in simple, straight-line (linear) patterns.
+
+* Small signals might barely affect price.
+* Large, dramatic signals can cause outsized reactions.
+
+Polynomials help AI capture these nonlinear relationships, making predictions that better match real-world market behavior.
+
+---
+
+### Explore Polynomial Shape**
+
+Sketch or plot:
+
+* $y = 2x + 1$ (linear)
+* $y = -x^2 + 4x + 1$ (quadratic)
+
+Where do they rise? Where do they bend?
+How does adding the $x^2$ term change the behavior?
+
+
+#### Compare Linear vs Polynomial**
+
+Sketch or plot:
+
+* $y = 2x + 1$ (straight line)
+* $y = -x^2 + 4x + 1$ (parabola)
+
+Observe: Where does each rise or bend? How does adding the $x^2$ term change the shape?
+
+---
+
+### **Solving Linear Systems: Balancing Multiple Conditions**
+
+AI often needs to satisfy several equations at once.
+
+Example system:
+
+$$
+2x + 3y = 5 \\
+x - y = 2
+$$
+
+This can represent balancing multiple conditions, like maximizing returns while keeping risk in check.
+
+---
+
+#### **Solve the System**
+
+Step 1: Solve second equation for $x$:
+
+$$
+x = y + 2
+$$
+
+Step 2: Plug into the first equation:
+
+$$
+2(y + 2) + 3y = 5 \rightarrow 2y + 4 + 3y = 5 \rightarrow 5y = 1 \rightarrow y = 0.2
+$$
+
+Step 3: Find $x$:
+
+$$
+x = 0.2 + 2 = 2.2
+$$
+
+Result:
+
+$$
+x = 2.2, \quad y = 0.2
+$$
+
+Why does this matter?
+AI optimization (like adjusting portfolio weights or risk factors) often comes down to solving large systems like this, sometimes with hundreds of variables.
+
+---
+
+### **Vectors: Representing Data Points**
+
+A **vector** is just an ordered list of numbers, like:
+
+$$
+[0.3, -0.5, 0.8]
+$$
+
+It can represent any series of features — for example, a snapshot of market indicators.
+
+Why use vectors?
+They allow AI to apply consistent operations across multiple inputs:
+
+* Scaling (multiplying all elements),
+* Weighting (applying learned coefficients),
+* Transformations (changing coordinate systems or representations).
+
+---
+
+#### **Activity: Scale a Vector**
+
+Given:
+
+$$
+v = [0.3, -0.5, 0.8], \quad m = 4
+$$
+
+Multiply each element:
+
+$$
+[0.3 \times 4, -0.5 \times 4, 0.8 \times 4] = [1.2, -2.0, 3.2]
+$$
+
+This effectively scales each input feature by its weight.
+
+---
+
+### **Matrices: Organizing Multi-Dimensional Data**
+
+A **matrix** is like a table of vectors — rows and columns.
+
+Example dataset:
+
+| Day | Score 1 | Score 2 |
+| --- | ------- | ------- |
+| 1   | 0.3     | 1.2     |
+| 2   | -0.5    | -3.8    |
+
+Matrix form:
 
 $$
 \begin{bmatrix}
@@ -178,7 +348,102 @@ $$
 \end{bmatrix}
 $$
 
-Multiply it by a vector of coefficients $[m, b]$ to see how the prediction is calculated.
+Why use matrices?
+AI can process **all rows at once** using matrix operations, which is much faster and more efficient than handling each individually.
+
+---
+
+#### **Matrix-Vector Multiplication**
+
+Given:
+
+* Data matrix:
+
+$$
+\begin{bmatrix}
+0.3 & 1.2 \\
+-0.5 & -3.8
+\end{bmatrix}
+$$
+
+* Coefficient vector:
+
+$$
+\begin{bmatrix}
+m \\
+b
+\end{bmatrix}
+$$
+
+Multiply:
+
+$$
+\begin{bmatrix}
+0.3 \times m + 1.2 \times b \\
+-0.5 \times m + (-3.8) \times b
+\end{bmatrix}
+$$
+
+This gives predictions across multiple rows at once.
+
+---
+
+### **Determinants: Checking System Solvability**
+
+The **determinant** is a single number calculated from a square matrix that tells you if a system has a unique solution.
+
+Example:
+
+$$
+\begin{bmatrix}
+2 & 3 \\
+1 & -1
+\end{bmatrix}
+$$
+
+Determinant:
+
+$$
+(2 \times -1) - (3 \times 1) = -2 - 3 = -5
+$$
+
+If determinant ≠ 0, the system has a unique solution.
+If determinant = 0, the system has no or infinite solutions.
+
+---
+
+#### Calculate a Determinant**
+
+Given:
+
+$$
+\begin{bmatrix}
+4 & 2 \\
+1 & 3
+\end{bmatrix}
+$$
+
+Determinant:
+
+$$
+(4 \times 3) - (2 \times 1) = 12 - 2 = 10
+$$
+
+Result: System is solvable.
+
+---
+
+### **Summary Table**
+
+| Concept        | Role in AI Trading                                     |
+| -------------- | ------------------------------------------------------ |
+| Functions      | Map input variables (scores, prices) to predictions.   |
+| Polynomials    | Capture nonlinear effects in market reactions.         |
+| Linear Systems | Solve for optimal combinations or satisfy constraints. |
+| Vectors        | Represent feature sets compactly for mathematical use. |
+| Matrices       | Organize and process large datasets efficiently.       |
+| Determinants   | Check if a system has unique solutions (solvability).  |
+
 
 ---
 
@@ -194,12 +459,30 @@ Possible answers:
 
 ---
 
-### Spot the Outlier
-
-Looking at the data points in the table, which point do you think will be hardest for AI’s linear model to predict accurately?
-Why?
+### **Which is the hardest point for the AI linear model?**
 
 
+| **Sentiment Score (x)** | **Actual Price Change (y%)** |
+| ----------------------- | ---------------------------- |
+| 0.3                     | 1.2                          |
+| -0.5                    | -3.8                         |
+| 0.8                     | 4.1                          |
+| -0.9                    | -10.0                        |
+| 0.6                     | 3.5                          |
+| 0.1                     | 0.7                          |
+| -0.7                    | -2.5                         |
+| 1.0                     | 6.0                          |
+
+
+Look at:
+
+* Most points follow a **roughly proportional** change (small sentiment → small price shift).
+* But **(-0.9, –10.0)** stands out as a **sharp drop**, far steeper than other negative sentiment points.
+
+This makes **(-0.9, –10.0)** the likely **outlier**:
+-Much steeper negative price drop.
+-Possibly influenced by non-linear effects or sudden market panic.
+-Linear models (which fit lines) struggle with such **sharp bends**.
 
 ### Summary
 
