--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -1,41 +1,55 @@
-
 # Algebra and Linear Algebra in AI
 
-Algebra and linear algebra might seem like complex math topics, but they are actually the foundation of many technologies that affect our lives, especially Artificial Intelligence (AI) in trading.
+Algebra and linear algebra might sound like complicated math topics, but they are actually the backbone of many technologies shaping our world today, including Artificial Intelligence (AI), data analysis, and machine learning.
 
-Imagine Alex, a data scientist at a hedge fund. His goal is to help predict Nvidia’s stock price by analyzing news articles about the company. Alex uses AI to assign a **sentiment score** to each news item, which shows whether the news is positive or negative.
+To make this real, imagine Alex, a data scientist.
+His goal is to predict how a company’s stock price might move by analyzing news articles.
 
-But how does AI turn these sentiment scores into predictions of the stock price?
-This is where **algebra** and **linear algebra** come into play.
+Let’s say Alex uses AI to assign a **sentiment score** to each piece of news, where positive news gives a high score and negative news gives a low score.
+
+But how does the AI turn these sentiment scores into predictions about stock price changes?
+This is where algebra and linear algebra step in.
 
 ---
 
-### What is Algebra?
+### 1. What is Algebra?
 
-Algebra is a branch of mathematics that uses symbols and letters to represent numbers and quantities in formulas and equations.
-It helps us describe how different things relate to each other.
+Algebra is a part of mathematics that lets us use **symbols and variables** (like $x$ and $y$) to describe relationships between quantities.
+Instead of working only with exact numbers, algebra lets us create **general rules** or **formulas** that describe how things change together.
 
-For example, in the equation:
+For example, you may know the simple equation:
 
 $$
 y = m x + b
 $$
 
-algebra helps express the relationship between $x$ (input) and $y$ (output) using constants $m$ and $b$.
+Here:
+
+* $x$ is the **input** (like sentiment score)
+* $y$ is the **output** (like predicted price change)
+* $m$ is the **slope** (how much change in $x$ affects $y$)
+* $b$ is the **intercept** (the base value when $x = 0$)
+
+This equation defines a **line**; it tells you how one thing changes depending on another.
 
 ---
 
-### What is Linear Algebra?
+### 2. What is Linear Algebra?
 
-Linear algebra extends these ideas to work with **vectors** and **matrices**, which are like lists and tables of numbers.
-It helps us analyze **many data points at once** and is essential for AI models working with large datasets.
+Linear algebra builds on basic algebra, but instead of handling single numbers, it works with:
+
+* **Vectors** (ordered lists of numbers)
+* **Matrices** (tables or grids of numbers)
+
+Linear algebra helps us process many data points at once, like hundreds or thousands of sentiment scores and price changes.
+This is essential for AI, because modern models work on large datasets and need efficient ways to apply mathematical operations across them.
 
 ---
 
-### Linear Models in AI
+### 3. Linear Models in AI
 
-Algebra lets us describe relationships between numbers using equations.
-A simple and common algebraic equation AI uses is:
+In AI, we often use **linear models** to predict outputs based on inputs.
+For example, Alex’s AI might use this equation:
 
 $$
 y = m x + b
@@ -43,119 +57,99 @@ $$
 
 Where:
 
-* $y$ is the predicted change in Nvidia’s stock price (in percent),
-* $x$ is the sentiment score from news,
-* $m$ is the slope that AI learns (how strongly sentiment affects price),
-* $b$ is the intercept AI adjusts (baseline change).
-
-This is called a **linear model**, which you can think of as a straight line drawn through a set of data points.
+* $y$ is the predicted percent change in stock price
+* $x$ is the sentiment score from news
+* $m$ is a learned weight (how strongly sentiment affects price)
+* $b$ is an adjustment (baseline price movement when sentiment is neutral)
 
 ---
 
-### Sentiment Scores and Price Changes
+### 4. Example Data Table
 
-| Sentiment Score ($x$) | Actual Price Change ($y$ percent) |
-| --------------------- | --------------------------------- |
-| 0.3                   | 1.2                               |
-| -0.5                  | -3.8                              |
-| 0.8                   | 4.1                               |
-| -0.9                  | -10.0                             |
+| Sentiment Score ($x$) | Actual Price Change ($y$) |
+| --------------------- | ------------------------- |
+| 0.3                   | 1.2                       |
+| -0.5                  | -3.8                      |
+| 0.8                   | 4.1                       |
+| -0.9                  | -10.0                     |
 
-
+AI looks at data like this to learn the best values of $m$ and $b$,
+so it can predict future price changes just from sentiment.
 
 ---
 
-### Predict the Price Change
+### 5. Predict the Price Change
 
-If AI finds:
+Let’s say the AI finds:
 
 * $m = 4$
 * $b = 0.5$
 
-What is the predicted price change when $x = 1.0$?
+What will be the predicted price change if the sentiment score $x = 1.0$?
 
-**Solution**:
+**Solution:**
 
 $$
 y = 4 \times 1.0 + 0.5 = 4 + 0.5 = 4.5 \text{ percent}
 $$
 
-
-### Understanding Slope and Intercept
-
-* **What does the slope $m$ represent in this context?**
-  It shows how much the price is expected to change for each unit change in sentiment.
-
-* **What would it mean if $m$ were zero?**
-  It would mean sentiment has no effect on price.
-
-* **What role does the intercept $b$ play if $x = 0$?**
-  It represents the baseline change when sentiment is neutral.
-
-
-
-### When Linear Models Are Not Enough
-
-Stock prices do not always move in a straight-line pattern. Markets can be **unpredictable and volatile**. That is why AI sometimes uses more complex models like quadratic equations:
-
-$$
-y = a x^2 + b x + c
-$$
-
-This equation adds an $x^2$ term, which allows the prediction curve to bend and better capture real-world ups and downs.
+So, the AI predicts a 4.5 percent increase.
 
 ---
 
-### Explore Non-Linearity
+### 6. Understanding the Slope and Intercept
 
-If:
+* **Slope $m$:**
+  This tells us how much the output changes for every unit change in the input.
+  In Alex’s case, it tells how strongly sentiment affects price change.
 
-* $a = -1$,
-* $b = 3$,
-* $c = 1$,
+* **If $m = 0$:**
+  It means sentiment has no effect; price change is flat regardless of news.
 
-Calculate the predicted price change for $x = 1$.
-
-**Solution**:
-
-$$
-y = -1 \times (1)^2 + 3 \times 1 + 1 = -1 + 3 + 1 = 3
-$$
+* **Intercept $b$:**
+  This is the baseline output when input is zero.
+  So if the sentiment score is neutral ($x = 0$), the intercept tells what the AI predicts the price change will be.
 
 ---
 
-### Visualizing Curves
+### Apply What You Have Learned
 
-**How does adding the $x^2$ term change the shape of the prediction compared to the straight line?**
-Try sketching a simple curve for both linear and quadratic equations to see the difference.
+Try solving these on your own.
 
-* Linear: straight line.
-* Quadratic: curve that bends up or down depending on $a$.
-
----
-
-### How Does AI Learn These Numbers?
-
-AI does not guess these coefficients ($m, b, a, c$) randomly.
-It **learns** them from data using **linear algebra**.
-
-Linear algebra is the branch of math that helps AI handle **many numbers at once**, often arranged in tables called **matrices**.
-Using these tools, AI can find the best-fitting equations for the data.
-![Line Plot](images/plot.png)
+1. **Simple Prediction**
+   If $m = 3$, $b = 1$, and sentiment $x = -0.5$, what is the predicted price change?
+   (Hint: $y = 3 \times (-0.5) + 1$)
 
 ---
 
-### How AI Learns
-
-In Alex’s case, AI:
-
-1. Looks at many past pairs of sentiment scores and actual price changes.
-2. Organizes this data in matrices.
-3. Uses linear algebra techniques to calculate the coefficients that minimize prediction errors.
+2. **Understanding No Slope**
+   If $m = 0$, $b = 2$, what will be the predicted price change no matter what $x$ is? Why?
 
 ---
-Got it!
-Here’s a slightly polished version, cutting down on the repetition of “sentiment,” removing emojis, no em dash, and adding an activity.
+
+3. **Intercept Interpretation**
+   If sentiment is perfectly neutral ($x = 0$), and $b = -1$, what does the model predict for price change? What might this suggest?
+
+---
+
+4. **Extension: Try Your Own Numbers**
+   Make up your own values for $m$, $b$, and $x$, and calculate the prediction.
+   How does changing $m$ affect the outcome?
+   How does changing $b$ affect it?
+
+---
+
+### Summary
+
+| Concept        | Role in AI Modeling                                         |
+| -------------- | ----------------------------------------------------------- |
+| Algebra        | Describes relationships between input and output            |
+| Linear Algebra | Handles many inputs and outputs at once (vectors, matrices) |
+| Linear Models  | Predict outcomes using simple equations like $y = m x + b$  |
+| Slope          | Measures how input affects output                           |
+| Intercept      | Gives the base prediction when input is zero                |
+
+
 
 ---
 
