--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -2,13 +2,96 @@
 
 Algebra and linear algebra might sound like complicated math topics, but they are actually the backbone of many technologies shaping our world today, including Artificial Intelligence (AI), data analysis, and machine learning.
 
-To make this real, imagine Alex, a data scientist.
-His goal is to predict how a company’s stock price might move by analyzing news articles.
+To make this real, imagine Alex, a data scientist. His goal is to build an AI system that can predict how a company’s stock price might move after news comes out.
 
-Let’s say Alex uses AI to assign a **sentiment score** to each piece of news, where positive news gives a high score and negative news gives a low score.
+Step 1: the AI **analyzes the text** of the news and assigns a **sentiment score** — a number representing how positive or negative the news is.
+Step 2: the AI **predicts** how much the stock price will rise or fall, based on that sentiment score.
 
-But how does the AI turn these sentiment scores into predictions about stock price changes?
+But how does the AI make that jump from **input numbers (sentiment scores)** to **output predictions (price changes)**?
 This is where algebra and linear algebra step in.
+
+---
+
+### 1. Foundations: Expressions, Equations, Inequalities
+
+Before we jump into linear models or complex systems, we need to understand the basic building blocks.
+
+---
+
+#### Expressions vs. Equations
+
+Many people confuse these terms, but they have a key difference.
+
+* **Expression**:
+  An expression is a combination of numbers, variables, and operations (like addition or multiplication), but it has **no equals sign**.
+  Example:
+
+  $$
+  2x + 3
+  $$
+
+  This just describes a relationship or value, but it’s **not something you solve**.
+
+* **Equation**:
+  An equation includes an **equals sign** and states that two things are equal.
+  Example:
+
+  $$
+  2x + 3 = 7
+  $$
+
+  This is something you **can solve**, by finding the value of $x$ that makes the statement true.
+
+In trading, expressions describe ongoing relationships between market variables (like price and demand), while equations let you **solve for unknowns** — like figuring out what level of sentiment is needed to trigger a target price movement.
+
+---
+
+#### Inequalities
+
+Inequalities extend the idea further.
+Instead of setting things as equal, they set **conditions**.
+
+Examples:
+
+* $x > 5$: $x$ is greater than 5
+* $y \leq 10$: $y$ is less than or equal to 10
+
+These are critical in trading to define:
+
+* **Risk limits** → Only trade if risk exposure is under a set threshold.
+* **Trigger points** → Only act if the sentiment score is above or below a certain level.
+* **Constraints** → Keep portfolio weights within allowed ranges.
+
+Understanding these conditions is key to building models that don’t just predict, but also **control** for safety and compliance.
+
+---
+
+### 2. What is Algebra?
+
+Algebra takes numbers and extends them into **general rules** using variables and symbols.
+It allows us to create formulas that describe **how quantities change together**.
+
+A classic example is:
+
+$$
+y = m x + b
+$$
+
+Here’s what each part represents:
+
+* $x$: the input (for example, sentiment score)
+* $y$: the output (for example, predicted price change)
+* $m$: the slope, which tells you **how much $y$ changes when $x$ increases**
+* $b$: the intercept, which is the **base level of $y$** when $x = 0$
+
+In Alex’s AI system, this equation could represent:
+
+* $y$: predicted percent change in the stock price
+* $x$: sentiment score from news
+* $m$: the **learned** weight showing how strongly sentiment affects price
+* $b$: the baseline movement when sentiment is neutral
+
+By plugging in values, the AI can **predict** future price movements.
 
 ---
 
