--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -4,8 +4,9 @@ Algebra and linear algebra might sound like complicated math topics, but they ar
 
 To make this real, imagine Alex, a data scientist. His goal is to build an AI system that can predict how a company’s stock price might move after news comes out.
 
-Step 1: the AI **analyzes the text** of the news and assigns a **sentiment score** — a number representing how positive or negative the news is.
-Step 2: the AI **predicts** how much the stock price will rise or fall, based on that sentiment score.
+-Step 1: the AI **analyzes the text** of the news and assigns a **sentiment score** — a number representing how positive or negative the news is.
+
+-Step 2: the AI **predicts** how much the stock price will rise or fall, based on that sentiment score.
 
 But how does the AI make that jump from **input numbers (sentiment scores)** to **output predictions (price changes)**?
 This is where algebra and linear algebra step in.
