--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -3,6 +3,7 @@
 Algebra and linear algebra might sound like complicated math topics, but they are actually the backbone of many technologies shaping our world today, including Artificial Intelligence (AI), data analysis, and machine learning.
 
 To make this real, imagine Alex, a data scientist. His goal is to build an AI system that can predict how a company’s stock price might move after news comes out.
+Here’s how his system works:
 
 - Step 1: the AI **analyzes the text** of the news and assigns a **sentiment score** — a number representing how positive or negative the news is.
 
