--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -14,86 +14,143 @@ But how does the AI make that jump from **input numbers (sentiment scores)** to 
 This is where algebra and linear algebra step in.
 
 
+---
 
-### 1. Foundations: Expressions, Equations, Inequalities
+### 1. Foundations: Expressions, Equations, and Inequalities
 
-Before we jump into linear models or complex systems, we need to understand the basic building blocks.
+Before we dive into linear models or advanced systems, it is important to understand the **basic mathematical tools** that make everything possible.
+These include **expressions**, **equations**, and **inequalities** — the fundamental language of algebra.
 
+---
 
-#### Expressions vs. Equations
+#### **Expressions vs Equations**
 
-Many people confuse these terms, but they have a key difference.
+Let’s break this down clearly.
 
-* **Expression**:
-  An expression is a combination of numbers, variables, and operations (like addition or multiplication), but it has **no equals sign**.
-  Example:
+* **Expression**
+  An expression is a combination of numbers, variables, and mathematical operations (like +, -, ×, ÷).
+  **Important:** An expression does not have an equals sign.
+
+  **Example 1:**
 
   $$
   2x + 3
   $$
 
-  This just describes a relationship or value, but it’s **not something you solve**.
+  This is simply describing a relationship or pattern between $x$ and the result. You cannot “solve” an expression because there is no equation to solve.
 
-* **Equation**:
-  An equation includes an **equals sign** and states that two things are equal.
-  Example:
+  **Example 2:**
+
+  $$
+  5y^2 - 7
+  $$
+
+  Again, just a combination — no equality or solution.
+
+---
+
+* **Equation**
+  An equation is when an expression is set equal to something.
+  **Important:** Equations can be solved because they give a specific condition.
+
+  **Example 1:**
 
   $$
   2x + 3 = 7
   $$
 
-  This is something you **can solve**, by finding the value of $x$ that makes the statement true.
+  Here, you can solve for $x$ because it asks: “For what value of $x$ does the left side equal the right side?”
 
-In trading, expressions describe ongoing relationships between market variables (like price and demand), while equations let you **solve for unknowns** — like figuring out what level of sentiment is needed to trigger a target price movement.
+  **Solution:**
 
----
+  $$
+  2x + 3 = 7 \implies 2x = 4 \implies x = 2
+  $$
 
-#### Inequalities
+  **Example 2:**
 
-Inequalities extend the idea further.
-Instead of setting things as equal, they set **conditions**.
+  $$
+  5y^2 - 7 = 18
+  $$
 
-Examples:
+  Here, you would solve for $y$ by first isolating the variable.
 
-* $x > 5$: $x$ is greater than 5
-* $y \leq 10$: $y$ is less than or equal to 10
 
-These are critical in trading to define:
 
-* **Risk limits** → Only trade if risk exposure is under a set threshold.
-* **Trigger points** → Only act if the sentiment score is above or below a certain level.
-* **Constraints** → Keep portfolio weights within allowed ranges.
-
-Understanding these conditions is key to building models that don’t just predict, but also **control** for safety and compliance.
+* Expressions help describe relationships, like how strongly sentiment might affect price change.
+* Equations help us calculate **specific** predictions, like “if sentiment is +0.8, how much will the price rise?”
 
 ---
 
-### 2. What is Algebra?
+#### **Try it Yourself**
 
-Algebra takes numbers and extends them into **general rules** using variables and symbols.
-It allows us to create formulas that describe **how quantities change together**.
+1. Is this an expression or an equation?
+   $3z^2 + 4z - 5$
+   (Answer: Expression)
 
-A classic example is:
+2. Solve for $x$ in the equation:
+   $4x - 6 = 10$
 
-$$
-y = m x + b
-$$
+3. Write an equation using a variable that models this sentence:
+   “The predicted price change is three times the sentiment score plus 1 percent.”
 
-Here’s what each part represents:
+---
 
-* $x$: the input (for example, sentiment score)
-* $y$: the output (for example, predicted price change)
-* $m$: the slope, which tells you **how much $y$ changes when $x$ increases**
-* $b$: the intercept, which is the **base level of $y$** when $x = 0$
+---
 
-In Alex’s AI system, this equation could represent:
+#### **Inequalities**
 
-* $y$: predicted percent change in the stock price
-* $x$: sentiment score from news
-* $m$: the **learned** weight showing how strongly sentiment affects price
-* $b$: the baseline movement when sentiment is neutral
+Inequalities describe conditions, ranges, or boundaries — they tell us what values **can** or **cannot** happen, rather than giving an exact solution.
 
-By plugging in values, the AI can **predict** future price movements.
+* **Example 1:**
+
+  $$
+  x > 5
+  $$
+
+  This says $x$ can be any number **greater** than 5.
+
+* **Example 2:**
+
+  $$
+  y \leq 10
+  $$
+
+  This says $y$ can be **less than or equal to** 10.
+
+---
+
+
+### **Inequalities help define rules and limits. For example:**
+
+* Only trigger a trade if the predicted price increase $> 2\%$.
+* Avoid stocks where the predicted price drop $\leq -5\%$.
+* Ensure the model’s risk exposure stays below a certain maximum.
+
+---
+
+#### **Practice Inequalities**
+
+1. Which values satisfy the inequality $s < 0$?
+   (Hint: What does this tell you about sentiment?)
+
+2. If the model predicts $p \geq 3$ percent, should you consider the trade according to a rule that only takes trades above 2 percent?
+
+3. Write an inequality for this situation:
+   “We will only invest if the expected profit is at least twice the expected loss.”
+
+---
+
+---
+
+### Summary Table
+
+| Concept        | What It Does                                                         | Example                     |
+| -------------- | -------------------------------------------------------------------- | --------------------------- |
+| **Expression** | Shows a relationship using variables and operations                  | $2x + 3$, $4y^2 - 1$        |
+| **Equation**   | Sets an expression equal to something, so you can solve for unknowns | $2x + 3 = 7$, $y^2 - 1 = 8$ |
+| **Inequality** | Sets a condition or limit on the values                              | $x > 5$, $y \leq 10$        |
+
 
 ---
 
