--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -16,12 +16,10 @@ This is where algebra and linear algebra step in.
 
 ---
 
-### 1. Foundations: Expressions, Equations, and Inequalities
+### Foundations: Expressions, Equations, and Inequalities
 
 Before we dive into linear models or advanced systems, it is important to understand the **basic mathematical tools** that make everything possible.
-These include **expressions**, **equations**, and **inequalities** — the fundamental language of algebra.
 
----
 
 #### **Expressions vs Equations**
 
@@ -33,9 +31,8 @@ Let’s break this down clearly.
 
   **Example 1:**
 
-  $$
-  2x + 3
-  $$
+\( 2x + 3 \)
+
 
   This is simply describing a relationship or pattern between $x$ and the result. You cannot “solve” an expression because there is no equation to solve.
 
@@ -94,7 +91,7 @@ Let’s break this down clearly.
 3. Write an equation using a variable that models this sentence:
    “The predicted price change is three times the sentiment score plus 1 percent.”
 
----
+
 
 ---
 
@@ -132,7 +129,7 @@ Inequalities describe conditions, ranges, or boundaries — they tell us what va
 #### **Practice Inequalities**
 
 1. Which values satisfy the inequality $s < 0$?
-   (Hint: What does this tell you about sentiment?)
+   (
 
 2. If the model predicts $p \geq 3$ percent, should you consider the trade according to a rule that only takes trades above 2 percent?
 
@@ -154,29 +151,7 @@ Inequalities describe conditions, ranges, or boundaries — they tell us what va
 
 ---
 
-### 1. What is Algebra?
-
-Algebra is a part of mathematics that lets us use **symbols and variables** (like $x$ and $y$) to describe relationships between quantities.
-Instead of working only with exact numbers, algebra lets us create **general rules** or **formulas** that describe how things change together.
-
-For example, you may know the simple equation:
-
-$$
-y = m x + b
-$$
-
-Here:
-
-* $x$ is the **input** (like sentiment score)
-* $y$ is the **output** (like predicted price change)
-* $m$ is the **slope** (how much change in $x$ affects $y$)
-* $b$ is the **intercept** (the base value when $x = 0$)
-
-This equation defines a **line**; it tells you how one thing changes depending on another.
-
----
-
-### 2. What is Linear Algebra?
+### What is Linear Algebra?
 
 Linear algebra builds on basic algebra, but instead of handling single numbers, it works with:
 
