--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -46,7 +46,7 @@ Let’s break this down clearly.
 
 ---
 
-* **Equation**
+ **Equation**
   An equation is when an expression is set equal to something.
   **Important:** Equations can be solved because they give a specific condition.
 
