--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -25,13 +25,16 @@ Before we dive into linear models or advanced systems, it is important to unders
 
 Let’s break this down clearly.
 
-* **Expression**
+ **Expression**
   An expression is a combination of numbers, variables, and mathematical operations (like +, -, ×, ÷).
   **Important:** An expression does not have an equals sign.
 
   **Example 1:**
 
-\( 2x + 3 \)
+$$
+2x + 3
+$$
+
 
 
   This is simply describing a relationship or pattern between $x$ and the result. You cannot “solve” an expression because there is no equation to solve.
@@ -99,7 +102,7 @@ Let’s break this down clearly.
 
 Inequalities describe conditions, ranges, or boundaries — they tell us what values **can** or **cannot** happen, rather than giving an exact solution.
 
-* **Example 1:**
+**Example 1:**
 
   $$
   x > 5
@@ -107,7 +110,7 @@ Inequalities describe conditions, ranges, or boundaries — they tell us what va
 
   This says $x$ can be any number **greater** than 5.
 
-* **Example 2:**
+**Example 2:**
 
   $$
   y \leq 10
