--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -45,7 +45,7 @@ $$
   5y^2 - 7
   $$
 
-  Again, just a combination — no equality or solution.
+  Again, just a combination, no equality or solution.
 
 ---
 
@@ -80,13 +80,13 @@ $$
 * Expressions help describe relationships, like how strongly sentiment might affect price change.
 * Equations help us calculate **specific** predictions, like “if sentiment is +0.8, how much will the price rise?”
 
----
+
 
 #### **Try it Yourself**
 
 1. Is this an expression or an equation?
    $3z^2 + 4z - 5$
-   (Answer: Expression)
+   
 
 2. Solve for $x$ in the equation:
    $4x - 6 = 10$
@@ -96,11 +96,11 @@ $$
 
 
 
----
+
 
 #### **Inequalities**
 
-Inequalities describe conditions, ranges, or boundaries — they tell us what values **can** or **cannot** happen, rather than giving an exact solution.
+Inequalities describe conditions, ranges, or boundaries, they tell us what values **can** or **cannot** happen, rather than giving an exact solution.
 
 **Example 1:**
 
@@ -139,9 +139,7 @@ Inequalities describe conditions, ranges, or boundaries — they tell us what va
 3. Write an inequality for this situation:
    “We will only invest if the expected profit is at least twice the expected loss.”
 
----
 
----
 
 ### Summary Table
 
